Phase G3 (batch 8/8): CODE-REVIEW FLOOR-C — Ch106/109/110 — G3 COMPLETE (45/45)
code-reviewer (FLOOR-C second half) on the final modules. Verdicts: Ch110 PASS,
Ch106/109 PASS-WITH-FIXES. All builds green.

Ch109 MAJOR fixed: README + pom carried stale Spotless churn ("spotless-maven-
plugin:3.6.0 does not exist / 404" + SET-AT-PIN placeholder) though flag 34 RESOLVED
confirms 3.6.0 is the real Maven coordinate. Updated all blocks to the pinned 3.6.0,
kept the reference-config-not-wired-live rationale. (De-hyphenated an accidental
"--add-exports" inside an XML comment that had broken the pom.) Rebuilt green (10 tests).

Ch106 (redaction-contract note, AtomicLong/LongAdder prose) + Ch110 (Roadmap.describe)
minors logged for lift. No BLOCKER, no banned word, no DORA band in code.

=== G3 COMPLETE: all 45 companion modules have a CODE-REVIEW report (FLOOR-C second
half done). ~14 shipped-content fixes applied across the 8 batches, incl. 2 FLOOR-A
NEUTRALITY catches in displayed/deliverable text (Ch26 "beats", Ch84 "better than")
and several broken/inaccurate displayed snippets (Ch03, Ch22, Ch48, Ch70, Ch75). ===

3 _CODEREVIEW.md added; drift clean.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Vn3iMLjGTQuUJJBaz5q8yp